--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,101 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.clearfix:before, .clearfix:after {
+  content: "";
+  display: table;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.clearfix:after {
+  clear: both;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.clearfix {
+  *zoom: 1;
 }
-
-.App-link {
-  color: #61dafb;
+.left-col,.left{
+  float: left;
+  width: 50%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right-col,.right{
+  float: right;
+  width: 50%;
+}
+.form{
+  width: 70%;
+  margin: 0 auto;
+}
+input[type="text"],.add-btn{
+  padding: 8px 20px;
+  margin: 10px;
+  border-bottom-left-radius: 10px;
+  border: 2px solid #066806;
+}
+.add-btn{
+  padding: 10px 30px;
+  color: #fff;
+  border:none;
+  transition: .4s;
+  text-transform: uppercase;
+  letter-spacing: 2.2px;
+  background-color: #066806;
+}
+.add-btn:hover{
+  background-color: black;
+}
+input[type="text"]:focus{
+  outline: none;
+}
+span{
+    font-size: 21px;
+    background: #066806;
+    color: #fff;
+    padding: 8px 14px;
+    margin-right: 15px;
+    border-radius: 50%;
+}
+.card{
+    box-shadow: 0px 0px 9px rgb(6 104 6);
+    width: 25%;
+    margin: 13px;
+    padding: 10px;
+    transition: .4s;
+    border-radius: 5px;
+    display: inline-block;
+}
+/* .card_p{
+  text-align: left;
+} */
+.modify-btn,.trash-btn{
+  border-radius: 50%;
+  padding: 9px 10px;
+  background: #066806;
+  border: none;
+  transition: .4s;
+  cursor: pointer;
+  color: #fff;
+  font-size: 16px;
+}
+.trash-btn{
+  padding: 9px 12px;
+}
+.trash-btn:hover{
+  background-color: crimson;
+  /* color: rgb(212, 18, 4); */
+}
+.modify-btn:hover{
+  background-color: darkgoldenrod;
+}
+.card:hover{
+  box-shadow: 0px 0px 9px rgb(14, 2, 177);;
+}
+h1{
+    background: #066806;
+    margin: 0;
+    padding: 20px 0px;
+    color: #fff;
+    text-shadow: 3px 2px 0px rgb(0 0 0);
+}
+.main_wr{
+  padding-top: 30px;
 }
